<package>
  <name>behavior_tree_core</name>
  <version>0.0.0</version>
  <description>
  A Behavior Tree framework in ROS.
  </description>
  <maintainer email="michele.colledanchise@gmail.com">Michele Colledanchise</maintainer>
  <license>MIT</license>
  <author>Michele Colledanchise</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>behavior_tree_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>behavior_tree_msgs</run_depend>
  <run_depend>gtest</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <test_depend>rosunit</test_depend>
</package>
