<package format="2">
  <name>behavior_tree_core</name>
  <version>0.0.0</version>
  <description>
  A Behavior Tree framework in ROS.
  </description>
  <maintainer email="michele.colledanchise@gmail.com">Michele Colledanchise</maintainer>
  <license>MIT</license>
  <author>Michele Colledanchise</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>behavior_tree_msgs</depend>
  <depend>genmsg</depend>
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>message_runtime</exec_depend>

  <test_depend>gtest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
