<?xml version="1.0"?>
<package>
  <name>behavior_tree_msgs</name>
  <version>0.0.0</version>
  <description>Contains messages for updating Blackboard</description>

  <maintainer email="somesh@aandkrobotics.com">Somesh Daga</maintainer>

  <license>MIT</license>

  <author email="somesh@aandkrobotics.com">Somesh Daga</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <export>
  </export>
</package>
